# veil

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRD.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  proposal.yml
.github/workflows/: ci.yml  clients-desktop.yml  desktop-client.yml  fuzz.yml  installer.yml  release.yml
clients/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
clients/desktop/src/: main.js  store.js  style.css
clients/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: lib.rs  main.rs  tun.rs
clients/mobile/: .gitignore  App.js  README.md  app.json  index.js  package-lock.json  package.json
clients/mobile/android/: README.md
clients/mobile/android/app/src/main/: AndroidManifest.xml
clients/mobile/android/app/src/main/java/org/veil/mobile/: VeilBridgeModule.kt  VeilBridgePackage.kt  VeilVpnService.kt
clients/mobile/android/app/src/main/res/values/: strings.xml
clients/mobile/ios/: README.md
clients/mobile/ios/PacketTunnelProvider/: Info.plist  PacketTunnel.entitlements  PacketTunnelProvider.swift  Veil-Bridging-Header.h  VeilSession.swift
clients/mobile/ios/VeilBridge/: VeilBridge.m  VeilBridge.swift
clients/mobile/src/: appStore.js  store.js  veil.js
core/: .golangci.yml  README.md  go.mod  go.sum
core/cmd/veil/: main.go
core/internal/acme/: acme.go
core/internal/admin/: admin.go
core/internal/admin/assets/: index.html
core/internal/auth/: auth.go
core/internal/bufpool/: pool.go  pool_test.go
core/internal/buildinfo/: buildinfo.go
core/internal/cli/: cli.go
core/internal/cli/admin/: admin.go
core/internal/cli/connect/: connect.go
core/internal/cli/serve/: serve.go
core/internal/cli/update/: update.go
core/internal/cli/user/: user.go
core/internal/client/: client.go  reconnect_test.go
core/internal/config/: config.go
core/internal/crypto/: noise.go
core/internal/dpi/decoy/: decoy.go
core/internal/dpi/mimicry/: mimicry.go  mimicry_test.go
core/internal/dpi/snipool/: default.go  snipool.go  snipool_test.go
core/internal/dpi/utlsdial/: utlsdial.go
core/internal/forward/: forward.go
core/internal/frame/: frame.go  frame_test.go  fuzz_test.go  stream_open.go  window_update.go  window_update_test.go
core/internal/mobile/: tun_pipe.go  wintun_windows.go
core/internal/proxy/: socks5.go  udp_flow.go
core/internal/session/: datagram.go  flow_test.go  handshake.go  handshake_test.go  ring.go  ring_test.go  secure.go  secure_test.go  session.go  session_test.go  stream.go
core/internal/sharelink/: fuzz_test.go  sharelink.go  sharelink_test.go
core/internal/transport/: race_test.go  registry.go  transport.go
core/internal/transport/masquetr/: client.go  masquetr.go  roundtrip_test.go  server.go
core/internal/transport/quictr/: quic.go
core/internal/transport/realitytr/: auth.go  auth_test.go  dialer.go  doc.go  hello.go  hello_fuzz_test.go  listener.go  realitytr.go
core/internal/transport/wsstr/: wsstr.go
core/internal/update/: cosign.go  update.go  update_test.go
core/internal/users/: accountant.go  schema.go  store.go  store_test.go
core/pkg/cgo/: desktop_windows.go  jni_android.go  mobile.go  pprof.go  veil.go
core/pkg/cgo/include/: veil.h
deploy/docker/: Dockerfile  README.md  authorized_keys.example  compose.yml  server.example.yaml
deploy/edge/deno/: README.md  deno.json  worker.ts
deploy/edge/fly/: Dockerfile  README.md  fly.toml  go.mod  main.go
deploy/homebrew/: README.md  veil.rb
deploy/scoop/: README.md  veil.json
docs/: AUDIT_PREP.md  INSTALL.md  LAUNCH_CHECKLIST.md  PROTOCOL.md  REAL_WORLD_VERIFICATION.md  RELEASING.md  THREAT_MODEL.md
docs/architecture/: ADR-0001-initial-tech-choices.md  ADR-0002-reality-transport.md  ADR-0003-masque-transport.md  ADR-0004-edge-backends.md  README.md
installer/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
installer/src/: main.js  store.js  style.css
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: admin.rs  edge_deploy.rs  lib.rs  main.rs  release.rs  ssh.rs
sdks/veil-node/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
sdks/veil-node/src/: lib.rs
sdks/veil-node/test/: smoke.js
sdks/veil-py/: .gitignore  README.md  pyproject.toml
sdks/veil-py/examples/: smoke.py
sdks/veil-py/src/veil/: __init__.py  core.py
sdks/veil-rs/: .gitignore  Cargo.toml  README.md  build.rs  veil.def
sdks/veil-rs/examples/: smoke.rs  version.rs
sdks/veil-rs/src/: ffi.rs  lib.rs
