[package]
name = "veil-installer"
version = "0.0.1"
description = "GUI installer for the Veil VPN server."
authors = ["Veil VPN Project Contributors"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "veil_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.54", default-features = false, features = ["ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
anyhow = "1"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
