# Veil VPN — Node.js NAPI bindings.
#
# Builds an N-API native addon (.node) that wraps the Veil client by
# delegating to the safe Rust SDK in sdks/veil-rs/. That keeps the
# C-ABI plumbing and the safety story single-sourced; this crate is
# only a thin JS-facing shell.
[package]
name = "veil-node"
version = "0.0.1"
edition = "2021"
authors = ["Veil VPN Project Contributors"]
license = "Apache-2.0"
description = "Node.js NAPI bindings for libveil (Veil VPN)."
repository = "https://github.com/redstone-md/veil"
rust-version = "1.77"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Wider feature surface than strictly necessary so the addon
# transparently passes complex types (objects, callbacks) without the
# consumer having to reach for additional crates.
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
veil = { path = "../veil-rs" }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1
