[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veil"
version = "0.0.1"
description = "Python bindings for libveil (Veil VPN C ABI)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Veil VPN Project Contributors" },
]
keywords = ["vpn", "censorship", "ffi", "noise"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/redstone-md/veil"
Source = "https://github.com/redstone-md/veil"

[tool.setuptools.packages.find]
where = ["src"]
