[package]
name = "veil"
version = "0.0.1"
edition = "2021"
authors = ["Veil VPN Project Contributors"]
license = "Apache-2.0"
description = "Safe Rust bindings for libveil (Veil VPN C ABI)."
repository = "https://github.com/redstone-md/veil"
readme = "README.md"
keywords = ["vpn", "censorship", "ffi", "noise"]
categories = ["api-bindings", "network-programming"]
rust-version = "1.77"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lib]
name = "veil"
crate-type = ["rlib"]

[[example]]
name = "smoke"
path = "examples/smoke.rs"
