[package]
name = "veil-desktop"
# Kept in lock-step with tauri.conf.json's `version`. Tauri reads the
# JSON value at build time for the bundle name, but the runtime
# package_info().version (which the updater compares against the
# manifest) comes from this Cargo manifest.
version = "0.1.0-alpha.6"
description = "Desktop client for Veil VPN."
authors = ["Veil VPN Project Contributors"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "veil_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
# Auto-update plumbing — endpoints + Ed25519 pubkey live in
# tauri.conf.json, the Rust side just wires the plugin into the
# builder. The companion `process` plugin gives the JS side a
# `relaunch()` after install completes.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# The desktop client links against libveil through the safe Rust
# wrapper that lives next door in the same monorepo.
veil = { path = "../../../sdks/veil-rs" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
